fixed spacing with top header

--- a/src/styles/sections/featured-collection.scss
+++ b/src/styles/sections/featured-collection.scss
@@ -16,6 +16,7 @@ body {
     font-size: 40px;
     color: $blue;
     line-height: 44px;
+    margin-bottom: 25px;
   }
   #description {
     margin: 0 auto;
